// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighted-element 1`] = `
<div
  className="schema-element highlighted undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
/>
`;

exports[`mapped-element 1`] = `
<div
  className="schema-element mapped undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
/>
`;

exports[`single-element 1`] = `
<div
  className="schema-element undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
/>
`;
